Starting work on the CLI and Part 2

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,32 +9,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c2ce1630",
+   "metadata": {},
+   "source": [
+    "# Questions\n",
+    "* What is the 'Transfer' transaction type?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a241b4fc",
+   "metadata": {},
+   "source": [
+    "## Load Transactions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "8433c9a9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Error parsing date: unconverted data remains: 2\n",
-      "   Row: {'transaction_id': '2', 'date': '2020-01-32', 'customer_id': '466', 'amount': '1255.95', 'type': 'credit', 'description': 'Error Checking'}\n",
-      "WARNING: Error parsing amount: [<class 'decimal.ConversionSyntax'>]\n",
-      "   Row: {'transaction_id': '2', 'date': datetime.datetime(2020, 1, 8, 0, 0), 'customer_id': '466', 'amount': '1255x95', 'type': 'credit', 'description': 'Error Checking'}\n",
-      "WARNING: Duplicate ID found: 2\n",
-      "   Row: {'transaction_id': '2', 'date': datetime.datetime(2020, 1, 8, 0, 0), 'customer_id': '466', 'amount': Decimal('1255.95'), 'type': 'credit', 'description': 'Error Checking'}\n",
-      "INFO:\n",
-      "   Number of transactions: 100000\n",
-      "   First 5 transactions:\n",
-      "       {'transaction_id': '1', 'date': datetime.datetime(2020, 10, 26, 0, 0), 'customer_id': '926', 'amount': Decimal('6478.39'), 'type': 'credit', 'description': 'Expect series shake art again our.'}\n",
-      "       {'transaction_id': '2', 'date': datetime.datetime(2020, 1, 8, 0, 0), 'customer_id': '466', 'amount': Decimal('1255.95'), 'type': 'credit', 'description': 'Each left similar likely coach take.'}\n",
-      "       {'transaction_id': '3', 'date': datetime.datetime(2019, 9, 2, 0, 0), 'customer_id': '110', 'amount': Decimal('-7969.68'), 'type': 'debit', 'description': 'Direction wife job pull determine leader move college.'}\n",
-      "       {'transaction_id': '4', 'date': datetime.datetime(2020, 12, 2, 0, 0), 'customer_id': '142', 'amount': Decimal('2927.41'), 'type': 'credit', 'description': 'Agree reveal buy black already.'}\n",
-      "       {'transaction_id': '5', 'date': datetime.datetime(2020, 12, 2, 0, 0), 'customer_id': '944', 'amount': Decimal('-4661.88'), 'type': 'debit', 'description': 'Child relationship show college whom speech.'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# open and read financial_transactions.csv into a list of dictionaries\n",
     "# and print the first 5 rows \n",
@@ -63,7 +59,8 @@
     "        print(f\"ERROR: Error writing to log file: {e}\")\n",
     "        sys.exit(1)\n",
     "\n",
-    "\n",
+    "print();\n",
+    "print (\"INFO: Starting to read financial_transactions.csv\")\n",
     "transactions = []   # Global so I can use it elsewhere as well\n",
     "try: \n",
     "    with open('financial_transactions.csv', mode='r') as file:\n",
@@ -72,17 +69,22 @@
     "\n",
     "        # create a set to check for duplicates\n",
     "        Unique_ID = set()\n",
+    "        # Track id Numbers\n",
+    "        id_number = 0\n",
     "        # Track input Row Numbers\n",
     "        row_number = 0\n",
     "        # Read all the rows into a list of dictionaries\n",
     "        for row in csv_reader:\n",
     "            row_number += 1\n",
+    "\n",
     "            # Convert date to datetime object\n",
     "            try: \n",
     "                row['date'] = datetime.strptime(row['date'],\"%Y-%m-%d\")\n",
     "            except ValueError as e:\n",
-    "                log(f\"WARNING: Error parsing date: {e}\\n{tab()}Row: {row}\")\n",
+    "                log(f\"WARNING: Error parsing date: {e}\\n{tab()}Row[{row_number}]: {row}\")\n",
     "                continue\n",
+    "            \n",
+    "            # Debit or Credit\n",
     "            try: \n",
     "                if row['type'] == 'debit':\n",
     "                    # Convert amount to negative decimal\n",
@@ -91,15 +93,29 @@
     "                    # Convert amount to positive decimal\n",
     "                    row['amount'] = Decimal(row['amount'])\n",
     "            except DecimalException as e:\n",
-    "                log(f\"WARNING: Error parsing amount: {e}\\n{tab()}Row: {row}\")\n",
+    "                log(f\"WARNING: Error parsing amount: {e}\\n{tab()}Row[{row_number}]: {row}\")\n",
     "                continue\n",
+    "           \n",
+    "            # Convert ID to Integer\n",
+    "            try: \n",
+    "                row['transaction_id'] = int(row['transaction_id'])\n",
+    "            except ValueError as e:\n",
+    "                log(f\"WARNING: Error parsing ID: {e}\\n{tab()}Row[{row_number}]: {row}\")\n",
+    "                continue\n",
+    "            # check id is sequential \n",
+    "            if row['transaction_id'] <= id_number:\n",
+    "                log(f\"WARNING: ID is not sequential: {row['transaction_id']}\\n{tab()}Row[{row_number}]: {row}\")\n",
+    "                continue\n",
+    "            else :\n",
+    "                id_number = row['transaction_id']\n",
     "            # Check for duplicate ID\n",
     "            if row['transaction_id'] in Unique_ID:\n",
-    "                log(f\"WARNING: Duplicate ID found: {row['transaction_id']}\\n{tab()}Row: {row}\")\n",
+    "                log(f\"WARNING: Duplicate ID found: {row['transaction_id']}\\n{tab()}Row[{row_number}]: {row}\")\n",
     "                continue\n",
     "            else:\n",
     "                Unique_ID.add(row['transaction_id'])\n",
     "            transactions.append(row)\n",
+    "        \n",
     "        # Print the first 5 rows    \n",
     "        if True:\n",
     "            print(\"INFO:\")\n",
@@ -121,9 +137,337 @@
     "except Exception as e:\n",
     "    print(f\"An error occurred: {e}\")\n",
     "    sys.exit(1)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0885dfdf",
+   "metadata": {},
+   "source": [
+    "## View Transactions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46db790e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import textwrap\n",
+    "def view_transaction_table(transactions, max_lines=10, type=None):\n",
+    "    \"\"\"\n",
+    "    View transactions in a table format.\n",
+    "    \"\"\"\n",
+    "    # track lines and max lines\n",
+    "    count = 0\n",
+    "    header_length = 82\n",
+    "    \n",
+    "    print_transaction_header()\n",
+    "    for transaction in transactions:\n",
+    "        if type and transaction['type'] != type:\n",
+    "            continue\n",
+    "        print_transaction_row(transaction)\n",
+    "        count += 1\n",
+    "        if max_lines and count >= max_lines:\n",
+    "            ## print_transaction_footer()\n",
+    "            message = f\"... Truncating Data to {max_lines} matching lines ...\"\n",
+    "            print(f\"{message: ^{header_length}}\")\n",
+    "            print_transaction_row(transactions[-1])\n",
+    "            break\n",
+    "    print_transaction_footer()\n",
     "    \n",
     "\n",
-    "    \n"
+    "# Use ODD-Length separator or things will get wonky.\n",
+    "def print_transaction_row(transaction, fill= ' ', separator=' | '):\n",
+    "    left = separator[1:]\n",
+    "    right = separator[:-1]\n",
+    "\n",
+    "    ## special handling so we can pass a string or date.\n",
+    "    try: \n",
+    "        date = transaction['date'].strftime('%b %d, %Y')\n",
+    "    except AttributeError:\n",
+    "        date = transaction['date']\n",
+    "\n",
+    "    print(f\"{left}{transaction['transaction_id']:{fill}<6}{separator}{date:{fill}<12}\" +\n",
+    "          f\"{separator}{transaction['customer_id']:{fill}<8}{separator}{transaction['amount']:{fill}<8}{separator}{transaction['type']:{fill}<8}\" + \n",
+    "          f\"{separator}{textwrap.shorten(transaction['description'],24, placeholder=' ...'):{fill}<24}{right}\")\n",
+    "\n",
+    "def print_transaction_header():\n",
+    "    ## create a transaction named header\n",
+    "    top = {\n",
+    "        'transaction_id': '-',\n",
+    "        'date': '-',\n",
+    "        'customer_id': '-',\n",
+    "        'amount': '-',\n",
+    "        'type': '-',\n",
+    "        'description': '-'\n",
+    "    }\n",
+    "    labels = {\n",
+    "        'transaction_id': 'ID',\n",
+    "        'date': 'Date',\n",
+    "        'customer_id': 'Customer',\n",
+    "        'amount': 'Amount',\n",
+    "        'type': 'Type',\n",
+    "        'description': 'Description'\n",
+    "    }\n",
+    "    footer = { \n",
+    "        'transaction_id': '-',\n",
+    "        'date': '-',\n",
+    "        'customer_id': '-',\n",
+    "        'amount': '-',\n",
+    "        'type': '-',\n",
+    "        'description': '-'\n",
+    "    }\n",
+    "    print_transaction_row(top, fill='-', separator='-.-')\n",
+    "    print_transaction_row(labels, fill=' ', separator=' | ')    \n",
+    "    print_transaction_row(footer, fill='-', separator='-|-')\n",
+    "\n",
+    "def print_transaction_footer():\n",
+    "    footer = {\n",
+    "        'transaction_id': '-',\n",
+    "        'date': '-',\n",
+    "        'customer_id': '-',\n",
+    "        'amount': '-',\n",
+    "        'type': '-',\n",
+    "        'description': '-'\n",
+    "    }\n",
+    "    print_transaction_row(footer, fill='-', separator='-^-')\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Example usage\n",
+    "    print()\n",
+    "    view_transaction_table(transactions)\n",
+    "    # Add more functionality as needed\n",
+    "    # e.g., filter by transaction_id, date, amount, type"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6137d07",
+   "metadata": {},
+   "source": [
+    "# CLI Input Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40b7d67e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## input_int\n",
+    "def input_int(prompt, default=None):\n",
+    "    while True:\n",
+    "        try:\n",
+    "            value = input(prompt)\n",
+    "            if not value and default is not None:\n",
+    "                return default\n",
+    "            return int(value)\n",
+    "        except ValueError:\n",
+    "            print(\"Invalid input. Please enter a valid integer.\")\n",
+    "\n",
+    "## input_datetime YYYY-MM-DD\n",
+    "def input_date(prompt, default=None):\n",
+    "    while True:\n",
+    "        try:\n",
+    "            value = input(prompt)\n",
+    "            if not value and default is not None:\n",
+    "                return default\n",
+    "            return datetime.strptime(value, \"%Y-%m-%d\")\n",
+    "        except ValueError:\n",
+    "            print(\"Invalid input. Please enter a valid date in YYYY-MM-DD format.\")\n",
+    "\n",
+    "## input_decimal\n",
+    "def input_decimal(prompt, default=None):\n",
+    "    while True:\n",
+    "        try:\n",
+    "            value = input(prompt)\n",
+    "            if not value and default is not None:\n",
+    "                return default\n",
+    "            return Decimal(value)\n",
+    "        except (ValueError, DecimalException):\n",
+    "            print(\"Invalid input. Please enter a valid decimal number.\")\n",
+    "\n",
+    "## input string from selected list of words. Title Case\n",
+    "def input_option(prompt, options):\n",
+    "\n",
+    "    while True:\n",
+    "        value = input(f\"{prompt}{', '.join(options)}: \").strip().lower()\n",
+    "\n",
+    "        matches = [k for k in options if value in k.lower()]\n",
+    "  \n",
+    "        if len(matches) == 1:\n",
+    "            value = matches[0]\n",
+    "            return value\n",
+    "        elif len(matches) > 1:\n",
+    "            print(f\"Ambiguous Input: {', '.join(matches)}\")\n",
+    "            continue\n",
+    "        else :\n",
+    "            print(f\"Invalid Input.\")\n",
+    "            continue\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a5b16a4",
+   "metadata": {},
+   "source": [
+    "# Transaction Validation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "167b1846",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def validate_transaction_id(transaction_id):\n",
+    "    \"\"\"\n",
+    "    Validate transaction ID.\n",
+    "    \"\"\"\n",
+    "    last_id = transactions[-1]['transaction_id'] if transactions else 0\n",
+    "    if not isinstance(transaction_id, int):\n",
+    "        log(\"ERROR: Transaction ID must be an integer.\")\n",
+    "        return False\n",
+    "    if transaction_id <= 0:\n",
+    "        log(\"ERROR: Transaction ID must be a positive integer.\")\n",
+    "        return False\n",
+    "    if transaction_id in Unique_ID:\n",
+    "        log(\"ERROR: Transaction ID already exists.\")\n",
+    "        return False\n",
+    "    if transaction_id <= last_id:\n",
+    "        log(f\"ERROR: Transaction ID must be greater than the last ID [{last_id}].\")\n",
+    "        return False\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d359c9d7",
+   "metadata": {},
+   "source": [
+    "## Add Transaction CLI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa1fc1ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_transaction(id, date, customer_id, amount, type, description):\n",
+    "    transaction = {\n",
+    "        'transaction_id': id,\n",
+    "        'date': date,\n",
+    "        'customer_id': customer_id,\n",
+    "        'amount': amount,\n",
+    "        'type': type,\n",
+    "        'description': description\n",
+    "    }\n",
+    "    transactions.append(transaction)\n",
+    "    Unique_ID.add(id)\n",
+    "    return transaction\n",
+    "\n",
+    "def add_transaction_cli():\n",
+    "    \n",
+    "    last_id = transactions[-1]['transaction_id'] if transactions else 0\n",
+    "    while True:\n",
+    "        transaction_id = int(input_int(f\"Enter transaction ID[{last_id+1}]: \"))\n",
+    "        if validate_transaction_id(transaction_id): break\n",
+    "            \n",
+    "   \n",
+    "    date = input_date(f\"Enter transaction date (YYYY-MM-DD): \")\n",
+    "    customer_id = input_int(\"Enter customer ID: \")\n",
+    "    amount = input_decimal(\"Enter transaction amount: \")\n",
+    "    type = input_option(\"Enter transaction type: \", ['Credit', 'Debit', 'Transfer'])\n",
+    "    description = input(\"Enter transaction description: \") \n",
+    "\n",
+    "    transaction = add_transaction(transaction_id, date, customer_id, amount, type, description)\n",
+    "    log(f\"INFO: Added transaction: {transaction}\")\n",
+    "    return transaction\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd570a9e",
+   "metadata": {},
+   "source": [
+    "## CLI Setup\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6521a498",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "CLI_EXIT = False\n",
+    "def exit_cli():\n",
+    "    global CLI_EXIT\n",
+    "    CLI_EXIT = True\n",
+    "    print(\"Exiting CLI...\")\n",
+    "\n",
+    " # Create a dictionary of Actions and Functions\n",
+    "actions = {\n",
+    "    'ADd':      add_transaction_cli,\n",
+    "    'CLs':      lambda: os.system('cls'), # clear the screen\n",
+    "    'deLete':   'delete_transaction',\n",
+    "    'Update':   'update_transaction',\n",
+    "    'vieW':     lambda: view_transaction_table(transactions),\n",
+    "    'Save':     'save_transactions',\n",
+    "    }\n",
+    "\n",
+    "# sort the actions alaphabetically lowercase\n",
+    "actions = dict(sorted(actions.items()))\n",
+    "# add an entry to dictionary for exit\n",
+    "actions['Exit'] = exit_cli\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2a82ee7",
+   "metadata": {},
+   "source": [
+    "## CLI Loop\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ba8e886",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print()\n",
+    "while CLI_EXIT == False:\n",
+    "    # Ask user for input\n",
+    "    print()\n",
+    "    print(\"-= Hornet Financial Calculator (Alpha) =-\")\n",
+    "    action = input_option(f\"Action: \",list(actions.keys()))\n",
+    "   \n",
+    "    if action in actions:\n",
+    "        # if the action is a function, call it\n",
+    "        if callable(actions[action]):\n",
+    "            actions[action]()\n",
+    "        else:\n",
+    "            print(f\"Action '{action}' is not callable or has not been implemented.\")\n",
+    "    else:\n",
+    "        print(f\"Invalid action: {action}\")\n",
+    "        continue    "
    ]
   }
  ],
