Fixing some minor errors left over from refactoring.

--- a/main.ipynb
+++ b/main.ipynb
@@ -71,6 +71,7 @@
     "\n",
     "\n",
     "transactions = []   # Global so I can use it elsewhere as well\n",
+    "Unique_ID = set()   # create a set to check for duplicates\n",
     "def read_transactions(file_name='financial_transactions.csv'):\n",
     "    # Parse date with datetime.strptime\n",
     "    # Make amount negative for 'debit'\n",
@@ -87,8 +88,6 @@
     "            # Create a CSV reader object\n",
     "            csv_reader = csv.DictReader(file)\n",
     "\n",
-    "            # create a set to check for duplicates\n",
-    "            Unique_ID = set()\n",
     "            # Track id Numbers\n",
     "            id_number = 0\n",
     "            # Track input Row Numbers\n",
@@ -514,8 +513,8 @@
     "            confirm = input_option(\"Are you sure you want to delete this transaction? \", ['Delete', 'Cancel'])\n",
     "            if confirm.lower() == 'delete':\n",
     "                transaction['type'] = 'Deleted'  # Mark as deleted\n",
-    "                transactions.remove(transaction)\n",
     "                Unique_ID.remove(transaction['transaction_id'])\n",
+    "                transactions.remove(transaction)\n",
     "                log(f\"INFO: Deleted transaction ID {transaction_id}.\")\n",
     "                print(f\"Transaction ID {transaction_id} deleted.\")\n",
     "            else:\n",
@@ -528,8 +527,12 @@
     "        \n",
     "        elif action == 'Cancel':\n",
     "            ## retstore the original transaction\n",
-    "            print(\"Cancelling transaction update.\")\n",
+    "            print(\"\\nCancelling transaction update.\")\n",
     "            print_transaction_row(transaction)\n",
+    "            print(\"Restoring original transaction:\")\n",
+    "            transaction.update(original_transaction)\n",
+    "            print_transaction_row(transaction)\n",
+    "\n",
     "            if (transaction in transactions):\n",
     "                print(\"Transaction update cancelled, no changes made.\")\n",
     "                log(f\"INFO: Update Canceled.  Transaction ID {transaction_id}\")\n",
@@ -886,6 +889,8 @@
    "source": [
     "def main():\n",
     "    read_transactions()  # Read transactions from CSV file\n",
+    "    print()\n",
+    "    view_transaction_table(transactions)\n",
     "\n",
     "    while CLI_EXIT == False:\n",
     "        # Ask user for input\n",
